--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@vercel/blob": "^0.27.0",
     "@vercel/kv": "^3.0.0",
     "next": "^15.0.0",
+    "openai": "^4.0.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sharp": "^0.34.0",
+    "zod": "^3.24.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.0",
